--- a/project/data-exploration.ipynb
+++ b/project/data-exploration.ipynb
@@ -55,51 +55,55 @@
     "con = sqlite3.connect(\"../data/data.sqlite\")\n",
     " \n",
     "# The following manipulations are done in SQL\n",
-    "# All columns from the table pedestrians are beeing selected and some renamed, but from the column 'time of measurement' only the first 10 characters are selected\n",
-    "# Additionally a column with row numbers is added to the table\n",
-    "\n",
     "# As the temperature and rain data are stored in two different tables, the data is combined in two subqueries\n",
     "# The average of the temperature and rain data is calculated and a column with row numbers is added to the tables\n",
-    "\n",
-    "# The three subqueries are joined together and the columns 'time', 'weekday', 'pedestrians', 'rain' and 'temperature' are selected\n",
+    "# The two subqueries are joined together with thew table 'pedestrians' and the columns 'date', 'pedestrians', 'rain' and 'temp' are selected\n",
     "\n",
     "df = pd.read_sql_query('''\n",
     "\n",
-    "WITH PedestrianData AS (\n",
+    "WITH RainData AS (\n",
     "    SELECT\n",
-    "        SUBSTR(p.[time of measurement], 1, 10) AS day,\n",
-    "        p.weekday AS weekday,\n",
-    "        p.[pedestrians count] AS pedestrians,\n",
-    "        ROW_NUMBER() OVER (ORDER BY p.[time of measurement]) AS row_num\n",
-    "    FROM pedestrians p\n",
+    "        r1.MESS_DATUM AS date,\n",
+    "        (r1.[  RS] + r2.[  RS]) / 2 AS rain\n",
+    "    FROM rainmoe r1\n",
+    "    JOIN rainnue r2 ON r1.MESS_DATUM = r2.MESS_DATUM\n",
     "),\n",
-    "RainData AS (\n",
+    "TempData AS (\n",
     "    SELECT\n",
-    "        (r1.[Niederschlag (6 bis 6 UTC)] + r2.[Niederschlag (6 bis 6 UTC)]) / 2 AS rain,\n",
-    "        ROW_NUMBER() OVER (ORDER BY r1.[Niederschlag (6 bis 6 UTC)]) AS row_num\n",
-    "    FROM rainmoe r1, rainnue r2\n",
-    "),\n",
-    "TemperatureData AS (\n",
-    "    SELECT\n",
-    "        (t1.[Mittelwert] + t2.[Mittelwert]) / 2 AS temperature,\n",
-    "        ROW_NUMBER() OVER (ORDER BY t1.[Mittelwert]) AS row_num\n",
-    "    FROM tempmoe t1, tempnue t2\n",
+    "        t1.MESS_DATUM AS date,\n",
+    "        (t1.[ TMK] + t2.[ TMK]) / 2 AS temp\n",
+    "    FROM tempmoe t1\n",
+    "    JOIN tempnue t2 ON t1.MESS_DATUM = t2.MESS_DATUM\n",
     ")\n",
     "\n",
     "SELECT\n",
-    "    pd.day,\n",
-    "    pd.weekday,\n",
-    "    pd.pedestrians,\n",
+    "    pd.timestamp AS date,\n",
+    "    pd.pedestrians_count AS pedestrians,\n",
     "    rd.rain,\n",
-    "    td.temperature\n",
-    "FROM\n",
-    "    PedestrianData pd\n",
-    "JOIN\n",
-    "    RainData rd ON pd.row_num = rd.row_num\n",
-    "JOIN\n",
-    "    TemperatureData td ON pd.row_num = td.row_num;\n",
+    "    td.temp\n",
+    "FROM pedestrians pd\n",
+    "JOIN RainData rd ON pd.timestamp = rd.date\n",
+    "JOIN TempData td ON pd.timestamp = td.date;\n",
     "\n",
     "''', con)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.head(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.info()"
    ]
   },
   {
@@ -127,34 +131,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Look at the first rows"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.head(20)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Data exploration\n",
     "Print some basic information about the data. Your data exploration would continue here."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.info()"
    ]
   },
   {
@@ -169,8 +147,8 @@
     "print(\"Max Pedestrians: \" + str(df['pedestrians'].max()))\n",
     "print(\"Min Rain: \" + str(df['rain'].min()))\n",
     "print(\"Max Rain: \" + str(df['rain'].max()))\n",
-    "print(\"Min Temperature: \" + str(df['temperature'].min()))\n",
-    "print(\"Max Temperature: \" + str(df['temperature'].max()))"
+    "print(\"Min Temperature: \" + str(df['temp'].min()))\n",
+    "print(\"Max Temperature: \" + str(df['temp'].max()))"
    ]
   },
   {
@@ -188,34 +166,34 @@
    "source": [
     "fig = px.scatter(\n",
     "    df,\n",
-    "    x=\"temperature\",\n",
+    "    x=\"temp\",\n",
     "    y=\"rain\",\n",
     "    size=\"pedestrians\",\n",
     "    color=\"pedestrians\",\n",
-    "    hover_data=[\"day\"],\n",
-    "    labels={'day':'Date', 'pedestrians': 'Number of Pedestrians', 'temperature': 'Temperature in °C', 'rain': 'Rain in mm'},\n",
+    "    hover_data=[\"date\"],\n",
+    "    labels={'date':'Date', 'pedestrians': 'Number of Pedestrians', 'temp': 'Temperature in °C', 'rain': 'Rain in mm'},\n",
     "    title=\"Rainfall and temperature in relation to the number of pedestrians.\"\n",
     ")\n",
     "fig.show()\n",
     "\n",
     "fig = px.bar(\n",
     "    df,\n",
-    "    x=\"day\",\n",
+    "    x=\"date\",\n",
     "    y=\"pedestrians\",\n",
     "    color=\"rain\",\n",
     "    barmode=\"group\",\n",
-    "    labels={'day':'Date', 'pedestrians': 'Number of Pedestrians', 'rain': 'Rain in mm'},\n",
+    "    labels={'date':'Date', 'pedestrians': 'Number of Pedestrians', 'rain': 'Rain in mm'},\n",
     "    title=\"Number of pedestrians per day colored with rainfall in mm.\"\n",
     ")\n",
     "fig.show()\n",
     "\n",
     "fig = px.bar(\n",
     "    df,\n",
-    "    x=\"day\",\n",
+    "    x=\"date\",\n",
     "    y=\"pedestrians\",\n",
-    "    color=\"temperature\",\n",
+    "    color=\"temp\",\n",
     "    barmode=\"group\",\n",
-    "    labels={'day':'Date', 'pedestrians': 'Number of Pedestrians', 'temperature': 'Temperature in °C'},\n",
+    "    labels={'date':'Date', 'pedestrians': 'Number of Pedestrians', 'temp': 'Temperature in °C'},\n",
     "    title=\"Number of pedestrians per day colored with temperature in °C.\"\n",
     ")\n",
     "fig.show()"
