changed png to pdf

--- a/project/data-exploration.ipynb
+++ b/project/data-exploration.ipynb
@@ -33,7 +33,8 @@
     "%pip install pandasql\n",
     "%pip install plotly\n",
     "%pip install nbformat\n",
-    "%pip install folium"
+    "%pip install folium\n",
+    "%pip install kaleido"
    ]
   },
   {
@@ -184,6 +185,7 @@
     "    title=\"Rainfall and temperature in relation to the number of pedestrians.\"\n",
     ")\n",
     "fig.show()\n",
+    "fig.write_image(\"pics/plot1.pdf\")\n",
     "\n",
     "fig = px.bar(\n",
     "    df,\n",
@@ -195,6 +197,7 @@
     "    title=\"Number of pedestrians per day colored with rainfall in mm.\"\n",
     ")\n",
     "fig.show()\n",
+    "fig.write_image(\"pics/plot2.pdf\")\n",
     "\n",
     "fig = px.bar(\n",
     "    df,\n",
@@ -205,7 +208,8 @@
     "    labels={'date':'Date', 'pedestrians': 'Number of Pedestrians', 'temp': 'Temperature in °C'},\n",
     "    title=\"Number of pedestrians per day colored with temperature in °C.\"\n",
     ")\n",
-    "fig.show()"
+    "fig.show()\n",
+    "fig.write_image(\"pics/plot3.pdf\")"
    ]
   }
  ],
