updated plot sizes

--- a/project/data-exploration.ipynb
+++ b/project/data-exploration.ipynb
@@ -182,10 +182,12 @@
     "    color=\"pedestrians\",\n",
     "    hover_data=[\"date\"],\n",
     "    labels={'date':'Date', 'pedestrians': 'Number of Pedestrians', 'temp': 'Temperature in °C', 'rain': 'Rain in mm'},\n",
-    "    title=\"Rainfall and temperature in relation to the number of pedestrians.\"\n",
+    "    title=\"Rainfall and temperature in relation to the number of pedestrians.\",\n",
+    "    width=1000,\n",
+    "    height=400\n",
     ")\n",
     "fig.show()\n",
-    "fig.write_image(\"pics/plot1.pdf\")\n",
+    "fig.write_image(\"plots/plot1.pdf\")\n",
     "\n",
     "fig = px.bar(\n",
     "    df,\n",
@@ -194,10 +196,12 @@
     "    color=\"rain\",\n",
     "    barmode=\"group\",\n",
     "    labels={'date':'Date', 'pedestrians': 'Number of Pedestrians', 'rain': 'Rain in mm'},\n",
-    "    title=\"Number of pedestrians per day colored with rainfall in mm.\"\n",
+    "    title=\"Number of pedestrians per day colored with rainfall in mm.\",\n",
+    "    width=1000,\n",
+    "    height=400\n",
     ")\n",
     "fig.show()\n",
-    "fig.write_image(\"pics/plot2.pdf\")\n",
+    "fig.write_image(\"plots/plot2.pdf\")\n",
     "\n",
     "fig = px.bar(\n",
     "    df,\n",
@@ -206,10 +210,12 @@
     "    color=\"temp\",\n",
     "    barmode=\"group\",\n",
     "    labels={'date':'Date', 'pedestrians': 'Number of Pedestrians', 'temp': 'Temperature in °C'},\n",
-    "    title=\"Number of pedestrians per day colored with temperature in °C.\"\n",
+    "    title=\"Number of pedestrians per day colored with temperature in °C.\",\n",
+    "    width=1000,\n",
+    "    height=400\n",
     ")\n",
     "fig.show()\n",
-    "fig.write_image(\"pics/plot3.pdf\")"
+    "fig.write_image(\"plots/plot3.pdf\")"
    ]
   }
  ],
